styles/custom.css
.latlon {
  width: 100px
}

.viztable td, th {
  text-align: center;
  border-top: 1px solid #E1E1E1;
  border-bottom: 1px solid #E1E1E1;
  border-left: 1px solid #E1E1E1;
  border-right: 1px solid #E1E1E1;
  padding-left: 15px;
  padding-right: 15px;

}
.viztable th:first-child, th:last-child {
  padding-right: 15px;
}
.smallbutton {
  background-color: #89f56c;
  height: 30px;
  line-height: 30px;
  padding: 0 6px;
}

.bigbutton {
  background-color: #8cbde6;
}

.yes-sun-cell {
  background-color: #7df04f;
}

.no-sun-cell {
  background-color: #ed7864;
}

